--- a/styles/components/header.module.css
+++ b/styles/components/header.module.css
@@ -12,67 +12,95 @@
   width: 200px;
 }
 
-.left-container {
-  display: flex;
-  align-items: center;
-  column-gap: 1.5rem;
-}
-
 .left-container > a:nth-child(n + 2) {
-  text-decoration: underline;
-  color: var(--blue-300);
-}
-
-.left-container > a:nth-child(n + 2):hover {
-  color: var(--blue-200);
+  display: none;
 }
 
 .right-container {
-  display: flex;
-  align-items: center;
-  column-gap: 1.5rem;
-}
-
-.input-container {
-  width: 240px;
-  padding: 0 1rem;
-  display: flex;
-  align-items: center;
-  column-gap: 4px;
-  border-radius: 30px;
-  background: var(--gray-200);
-}
-
-.input-container:hover {
-  box-shadow: 0 0 0 2px var(--gray-400);
-}
-
-.input-container:focus-within {
-  box-shadow: 3px 6px 0 var(--blue-300), 0 0 0 2px var(--blue-300);
-}
-
-.input-container > input:focus {
-  outline: none;
-  color: var(--pink-300);
-}
-
-.input-container > input {
-  width: 90%;
-  height: max-content;
-  background: var(--gray-200);
-  border-radius: 30px;
-  color: var(--gray-400);
-  font-weight: 800;
-  padding: 12px 0;
-  border: 0;
-}
-
-.input-container > svg {
-  width: 1.5rem;
-  height: 1.5rem;
+  display: none;
 }
 
 .form-container {
   width: max-content;
   margin: 0 auto;
+}
+
+.hamburger {
+  background: var(--transparent);
+  border: 0px;
+  margin-right: 1.5rem;
+  margin-bottom: 4px;
+}
+
+.hamburger > svg {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-bottom: -6px;
+}
+
+@media (min-width: 768px) {
+  .hamburger-container {
+    display: none;
+  }
+
+  .right-container {
+    display: flex;
+    align-items: center;
+    column-gap: 1.5rem;
+  }
+
+  .input-container {
+    width: 240px;
+    padding: 0 1rem;
+    display: flex;
+    align-items: center;
+    column-gap: 4px;
+    border-radius: 30px;
+    background: var(--gray-200);
+  }
+
+  .input-container:hover {
+    box-shadow: 0 0 0 2px var(--gray-400);
+  }
+
+  .input-container:focus-within {
+    box-shadow: 3px 6px 0 var(--blue-300), 0 0 0 2px var(--blue-300);
+  }
+
+  .input-container > input:focus {
+    outline: none;
+    color: var(--pink-300);
+  }
+
+  .input-container > input {
+    width: 90%;
+    height: max-content;
+    background: var(--gray-200);
+    border-radius: 30px;
+    color: var(--gray-400);
+    font-weight: 800;
+    padding: 12px 0;
+    border: 0;
+  }
+
+  .input-container > svg {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  .left-container {
+    display: flex;
+    align-items: center;
+    column-gap: 1.5rem;
+  }
+
+  .left-container > a:nth-child(n + 2) {
+    display: block;
+    text-decoration: underline;
+    color: var(--blue-300);
+  }
+
+  .left-container > a:nth-child(n + 2):hover {
+    color: var(--blue-200);
+  }
 }
