--- a/styles/components/styles/index.module.css
+++ b/styles/components/styles/index.module.css
@@ -1,3 +1,10 @@
 .container {
-  color: var(--blue-300);
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .container {
+    display: contents;
+    color: var(--blue-300);
+  }
 }
